# aoc2024python

./: .gitignore  Taskfile.yaml  leaderboard.py  puzzle_page_parser.py  pyproject.toml  util.py
day01/: main.py  test.py
day02/: main.py  test.py
day03/: main.py  test.py
day04/: main.py  test.py
day05/: main.py  test.py
day06/: main.py
day07/: main.py  test.py
day08/: main.py  test.py
day09/: main.py
day10/: main.py  test.py
day11/: main.py  test.py
day12/: main.py  test.py
day13/: main.py
day14/: main.py
day15/: main.py
day16/: main.py
day17/: main.py
day18/: main.py
day19/: main.py
day21/: main.py
day22/: main.py  test.py
template/: main.py
